--- a/tabla_html/templates/index.html
+++ b/tabla_html/templates/index.html
@@ -26,7 +26,7 @@
             <tbody>
                 {% for user in users %}
                 <tr>
-                    <th scope="row">{{ users[user] }}</th>
+                    <th scope="row">{{ loop.index }}</th>
                     <td>{{ user['first_name'] }}</td>
                     <td>{{user['last_name'] }}</td>
                     <td>{{user['first_name'] }} {{ user['last_name'] }}</td>
