--- a/encuesta_dojo/flask_app/templates/index.html
+++ b/encuesta_dojo/flask_app/templates/index.html
@@ -11,6 +11,15 @@
     <div class="container w-50 mt-5 p-4 bg-dark text-light">
         <h1 class="text-warning">Dojo Survey</h1>
         <form action="/process" method="post">
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    {% for message in messages %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ message }}
+                    </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
             <div class="form-group">
                 <label for="name_input">Name:</label>
                 <input type="text" class="form-control" id= "name_input" name="name" placeholder="Your name here . . .">
@@ -38,11 +47,14 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="comments">Comments:</label>
-                <textarea class="form-control" id="comments" name = "comments" rows="4"></textarea>
+                <label for="comments">Comment (optional)):</label>
+                <textarea class="form-control" id="comment" name = "comment" rows="4"></textarea>
             </div>
             <button type="submit" class="btn btn-warning">Submit</button>
         </form>
     </div>
+    <p class="text-center">
+        <a href="/result" class="text-dark">List of students</a> 
+    </p>
 </body>
 </html>
