--- a/encuesta_dojo/flask_app/templates/list.html
+++ b/encuesta_dojo/flask_app/templates/list.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Thank you!</title>
+    <title>Students in dojos</title>
 </head>
 <body>
-    <div class="container container w-50 mt-5 p-4 bg-dark text-light">
-        <h1 class="text-warning mb-3">{{ name }}</h1>
-        <p>Dojo Location: {{ location }}</p>
-        <p>Favorite Language: {{ language }}</p>
-        <p>Comments: {{ comments }}</p>
-        <a class="btn btn-warning" href="/">Home</a>
+    <div class=" container bg-dark text-light mt-5 p-4 w-25">
+        <h1 class="text-warning">All Students</h1>
+        {% for dojo in dojos %}
+            <p>
+                <a href="/dojos/{{ dojo.id }}" class= "text-light">{{dojo.name}} - {{ dojo.location }}</a>
+            </p>
+        {% endfor %}
     </div>
+</div>
+<p class="text-center mt-4">
+    <a href="/" class="text-dark">Home</a> 
+</p>
 </body>
 </html>
